🧹 CHORE: update sidebar title text in fa.json

--- a/src/locales/fa.json
+++ b/src/locales/fa.json
@@ -7,7 +7,7 @@
     "darkmode": "حالت تاریک"
   },
   "sidebar": {
-    "title": " داشبورد",
+    "title": " زمرد پنل",
     "dashboard": "داشبورد",
     "analytics": "تحلیل‌ها",
     "finance": "امور مالی",
